--- a/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
@@ -133,41 +133,11 @@ ifdef::voelkner[]
 endif::voelkner[]
 
 ifdef::voelkner[]
-| Datenfelder für Rabattpreise: +
-*Rabatt Startzeit* +
-*Rabatt Endzeit*
-| Optional kannst du zeitlich begrenzte Rabattpreise an Voelkner übermitteln. Auch die Staffelpreise können rabattiert werden. Dazu erstellst du Aktionspreise mit denselben Werten für die Einstellung *Ab Menge* wie die Staffelpreise für {market}.
+| *Rabatt Startzeit*
+| Ordne eine Eigenschaft des Typs *Datum* zu. Über diese Eigenschaft legst du fest, wann <<discount-prices, Rabattzeiträume>> starten.
 
-*_Vorbereitungen:_*
-
-* Erstelle eine Eigenschaft des Typs *Datum* für das Startdatum. Nenne diese Eigenschaft zum Beispiel `Voelkner Rabatt Startzeit`.
-* Erstelle eine Eigenschaft des Typs *Datum* für das Enddatum. Nenne diese Eigenschaft zum Beispiel `Voelkner Rabatt Endzeit`.
-* Ordne in diesem Schritt des Assistenten die folgenden Datenfelder zu:
-  ** Marktplatz-Datenfeld *Rabatt Startzeit* = plentymarkets Eigenschaft *Voelkner Rabatt Startzeit* des Typs *Datum*
-  ** Marktplatz-Datenfeld *Rabatt Endzeit* = plentymarkets Eigenschaft *Voelkner Rabatt Endzeit* des Typs *Datum*
-
-*_Aktionspreis für Verkaufspreis erstellen:_*
-
-* Erstelle einen Verkaufspreis des Typs *Aktionspreis*. +
-  *_Tipp:_* Vergiss nicht, für diesen Aktionspreis die Herkünfte *Mirakl* und *Voelkner* zu aktivieren.
-
-*_Aktionspreis für Staffelpreise erstellen:_*
-
-* Erstelle genauso viele Verkaufspreise des Typs *Aktionspreis*, wie du Staffelpreise für {market} hast.
-  *_Tipp:_* Vergiss nicht, für die Aktionspreise die Herkünfte *Mirakl* und *Voelkner* zu aktivieren.
-* Gib für die Aktionspreise denselben Wert für die Einstellung *Ab Menge* ein wie bei den Verkaufspreisen für die Staffelung.
-
-[.instruction]
-Rabattpreis für Variante festlegen:
-
-. Verknüpfe den Verkaufspreis des Typs *Aktionspreis* mit der Variante.
-. Gib einen Preis für den Rabattpreis ein.
-. *_Optional:_* Um Staffelpreise zu reduzieren, verknüpfe auch die anderen *Aktionspreise* für Staffelpreise mit der Variante und gib die Preise ein.
-. Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Startzeit*.
-. Wähle ein Datum für die Eigenschaft. Der Rabattpreis wird an diesem Datum gestartet.
-. Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Endzeit*.
-. Wähle ein Datum für die Eigenschaft. Der Rabattpreis wird an diesem Datum beendet.
-
+| *Rabatt Endzeit*
+| Ordne eine Eigenschaft des Typs *Datum* zu. Über diese Eigenschaft legst du fest, wann <<discount-prices, Rabattzeiträume>> enden.
 endif::voelkner[]
 
 2+^| Schritt *Optionen für Angebots-Export*
