--- a/docs/de-de/modules/maerkte/pages/voelkner.adoc
+++ b/docs/de-de/modules/maerkte/pages/voelkner.adoc
@@ -82,6 +82,61 @@ include::partial$verkaufspreis-festlegen.adoc[]
 
 include::partial$mirakl-volume-discounts.adoc[]
 
+[#discount-prices]
+=== _Optional:_ Rabattpreise festlegen
+
+Übermittle optional zeitlich begrenzte Rabattpreise an Voelkner. Auch Staffelpreise können rabattiert werden.
+
+*_Vorbereitungen:_*
+
+* Erstelle eine Eigenschaft des Typs *Datum* für das Startdatum. Nenne diese Eigenschaft zum Beispiel `Voelkner Rabatt Startzeit`.
+* Erstelle eine Eigenschaft des Typs *Datum* für das Enddatum. Nenne diese Eigenschaft zum Beispiel `Voelkner Rabatt Endzeit`.
+* Ordne im Schritt *Zuordnung der Angebots-Eigenschaften* des Assistenten die folgenden Datenfelder zu:
+  ** Marktplatz-Datenfeld *Rabatt Startzeit* = plentymarkets Eigenschaft *Voelkner Rabatt Startzeit* des Typs *Datum*
+  ** Marktplatz-Datenfeld *Rabatt Endzeit* = plentymarkets Eigenschaft *Voelkner Rabatt Endzeit* des Typs *Datum*
+
+[tabs]
+====
+Aktionspreis für Verkaufspreis::
++
+--
+[.instruction]
+Aktionspreis für Verkaufspreis festlegen:
+
+. Erstelle einen Verkaufspreis des Typs *Aktionspreis*. +
+  *_Tipp:_* Vergiss nicht, für diesen Aktionspreis die Herkünfte *Mirakl* und *Voelkner* zu aktivieren.
+. Verknüpfe den Verkaufspreis des Typs *Aktionspreis* mit der Variante.
+. Gib einen Preis für den Rabattpreis ein.
+. Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Startzeit*.
+. Wähle ein Datum für die Eigenschaft. Der Rabattpreis wird an diesem Datum gestartet.
+. Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Endzeit*.
+. Wähle ein Datum für die Eigenschaft. Der Rabattpreis wird an diesem Datum beendet.
+
+--
+ 
+Aktionspreise für Staffelpreise::
++
+--
+
+[.instruction]
+Aktionspreise für Staffelpreise:
+
+. Erstelle genauso viele Verkaufspreise des Typs *Aktionspreis*, wie du Staffelpreise für {market} hast. +
+  *_Tipp:_* Vergiss nicht, für die Aktionspreise die Herkünfte *Mirakl* und *Voelkner* zu aktivieren.
+. Gib für diese Aktionspreise bei der Einstellung *Ab Menge* dieselben Werte ein wie bei den normalen Verkaufspreisen für die Staffelung.
+. Verknüpfe den Verkaufspreis und die Staffelpreise des Typs *Aktionspreis* mit der Variante.
+. Gib für jeden Aktionspreis einen Preis ein.
+. Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Startzeit*.
+. Wähle ein Datum für die Eigenschaft. Der Rabattpreis wird an diesem Datum gestartet.
+. Verknüpfe die Variante mit der Eigenschaft *Voelkner Rabatt Endzeit*.
+. Wähle ein Datum für die Eigenschaft. Der Rabattpreis wird an diesem Datum beendet.
+
+--
+====
+
+
+
+
 [#eigenschaften-erstellen]
 == Eigenschaften erstellen
 
