ADD quick search translation

--- a/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
+++ b/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
@@ -91,7 +91,8 @@ After you have carried out all tests, you have to deactivate the test mode in th
 | *Email*
 |Enter the email address that should be used for the ticket system. This is a mandatory field.
 
-2+^| *Retrieval* (icon:exclamation-triangle[role="red"] *_Note:_* All settings in this area are mandatory.)
+2+^| *Retrieval* (icon:exclamation-triangle[role="red"] *_Note:_* All settings in this area are mandatory.) +
+*_Note:_* If you are using Office 365 Exchange, pay attention to the <<#note-office-365-exchange, note>> below this table.
 
 | *Active*
 |If you want the account and thus the retrieval to be active, activate the option. +
@@ -155,6 +156,15 @@ Select *Delete* if you do not want to save the emails. The emails are deleted af
 |This option is only visible if the procedure *Move* was selected. Select which folder the emails should be moved to. +
 *_Important:_* You are required to select a folder. If you do not select a folder, the emails are not moved.
 |====
+
+
+[#note-office-365-exchange]
+[.collapseBox]
+.Office 365 Exchange with Basic Auth
+--
+If you are using Office 365 Exchange together with Basic Auth, it is no longer possible to start the email retrieval or email import. Exchange Online link:https://docs.microsoft.com/en-us/lifecycle/announcements/exchange-online-basic-auth-deprecated[deprecated^] the basic authentication (Basic Auth). +
+The email despatch is _not_ affected by this. As a workaround, you can set up a new inbox at another provider and transfer the emails to this inbox.
+--
 
 [#650]
 === Assigning rights for roles, statuses and types for back end users
