--- a/docs/de-de/modules/warenwirtschaft/pages/artikel-umbuchen.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/artikel-umbuchen.adoc
@@ -86,7 +86,7 @@ Einstellungen zur Umbuchung vornehmen:
 *Deaktiviert* (icon:toggle-off[role="darkGrey"]) = Artikel können entweder per Scan oder per manueller Auswahl hinzugefügt werden.
 
 | *Zweck*
-|Mithilfe dieser Option kannst du Lagerorte mit bestimmten xref:warenwirtschaft:lager-verwalten.adoc#intable-zweck[Zwecken] von den vorgeschlagenen Ziellagerorten ausschließen. +
+|Mithilfe dieser Option kannst du Lagerorte mit bestimmten xref:warenwirtschaft:lager-einrichten.adoc#intable-zweck[Zwecken] von den vorgeschlagenen Ziellagerorten ausschließen. +
 *_Beispiel:_* Deaktiviere (icon:toggle-off[role="darkGrey"]) den Zweck *Retoure*, damit Artikel nicht fälschlicherweise an Lagerorte mit diesem Zweck umgebucht werden und fälschlicherweise mit retournierten Artikeln vermischt werden.
 
 |===
