--- a/docs/de-de/modules/warenwirtschaft/pages/inventur-vornehmen.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/inventur-vornehmen.adoc
@@ -81,7 +81,7 @@ Nun importierst du den in der CSV-Datei berichtigten Bestand in dein plentymarke
 [WARNING]
 .Physischer Warenbestand wird überschrieben!
 ====
-Beim Import werden die aktuellen physischen Warenbestände überschrieben, d.h. dein vorheriger Warenbestand ist nicht wiederherstellbar! Reservierte Warenbestände bleiben erhalten und werden nicht importiert. Wenn du nicht den kompletten physischen Warenbestand importieren möchtest, sondern nur bei einzelnen Varianten den Bestand nach oben korrigieren, kannst du Wareneingänge per Datenimport hinzufügen. Verwende das Spezialformat xref:daten:incomingitems.adoc#[IncomingItems].
+Beim Import werden die aktuellen physischen Warenbestände überschrieben, d.h. dein vorheriger Warenbestand ist nicht wiederherstellbar! Reservierte Warenbestände bleiben erhalten und werden nicht importiert. Wenn du nicht den kompletten physischen Warenbestand importieren möchtest, sondern nur bei einzelnen Varianten den Bestand nach oben korrigieren, kannst du Wareneingänge per Datenimport hinzufügen. Verwende das Spezialformat xref:daten:elasticSync-wareneingang.adoc#[Wareneingang].
 ====
 
 [#450]
