--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -19,7 +19,7 @@ So kannst du beispielsweise bestimmen, wie die Artikel der Pickliste im Lager er
 [.instruction]
 Einstellungen für Picklisten vornehmen:
 
-. <<warenwirtschaft/plentywarehouse/installation-und-ersteinrichtung#300, Logge dich in plentyWarehouse ein>>.
+. xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#300[Logge dich in plentyWarehouse ein].
 . Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) oben links.
 . Tippe unten auf *Einstellungen* (material:settings[]). +
 → Das Einstellungsmenü öffnet sich.
