--- a/docs/de-de/modules/warenwirtschaft/pages/warenbestaende-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/warenbestaende-verwalten.adoc
@@ -406,7 +406,7 @@ icon:map-signs[] *_Oder_*: Klicke auf *Import hinzufügen*, um einen Import vom 
 [#1000]
 == Warenbestandsdaten importieren oder exportieren
 
-Du kannst Warenbestandsdaten importieren oder exportieren und so z.B. eine Inventur vornehmen. Das Datenformat xref:daten:stock.adoc#[Stock] enthält die meisten Daten über deine Warenbestände. Datenformate, die im Zusammenhang mit deinen Beständen nützlich sein können, sind:
+Du kannst Warenbestandsdaten importieren oder exportieren und so z.B. eine Inventur vornehmen. Das Datenformat xref:daten:elasticSync-warenbestand.adoc#[Warenbestand] enthält die meisten Daten über deine Warenbestände. Datenformate, die im Zusammenhang mit deinen Beständen nützlich sein können, sind:
 
 * xref:daten:stock.adoc#[Stock],
 * xref:daten:variationsupplier.adoc#[VariationSupplier],
