remove symbols from pages DE

--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
@@ -226,9 +226,9 @@ include::partial$subscription-item-ended-at.adoc[]
 :kommas:
 
 [[table-key-figures-operators-subscription-item-ended-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -259,9 +259,9 @@ include::partial$subscription-item-started-at.adoc[]
 :kommas:
 
 [[table-key-figures-operators-subscription-item-started-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -292,9 +292,9 @@ include::partial$subscription-ended-at.adoc[]
 :kommas:
 
 [[table-key-figures-operators-subscription-ended-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -325,9 +325,9 @@ include::partial$subscription-started-at.adoc[]
 :kommas:
 
 [[table-key-figures-operators-subscription-started-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -359,9 +359,9 @@ include::partial$amazon-konto.adoc[]
 :kommas:
 
 [[table-key-figures-operators-amazon-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -385,9 +385,9 @@ include::partial$artikel-id.adoc[]
 :kommas:
 
 [[table-key-figures-operators-itemid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -415,9 +415,9 @@ include::partial$auftragsherkunft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-referrer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -455,9 +455,9 @@ include::partial$auftragspositionstyp.adoc[]
 :kommas:
 
 [[table-key-figures-operators-orderitemtype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-keinem-dieser-werte.adoc[]
 
@@ -481,9 +481,9 @@ include::partial$auftragsstatus.adoc[]
 :kommas:
 
 [[table-key-figures-operators-orderstatus]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -523,9 +523,9 @@ _Beachte_, dass die Mengen der Auftragspositionen in Gutschriften und Retouren v
 :kommas:
 
 [[table-key-figures-operators-ordertype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -550,9 +550,9 @@ include::partial$bezahlt-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-paid-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -584,9 +584,9 @@ include::partial$ebay-konto.adoc[]
 :kommas:
 
 [[table-key-figures-operators-ebay-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -611,9 +611,9 @@ include::partial$erloeskonto.adoc[]
 :kommas:
 
 [[table-key-figures-operators-revenue-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -641,9 +641,9 @@ include::partial$erstellt-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-created-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -676,9 +676,9 @@ include::partial$hersteller.adoc[]
 :kommas:
 
 [[table-key-figures-operators-producer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -706,9 +706,9 @@ include::partial$kontakt-id.adoc[]
 :kommas:
 
 [[table-key-figures-operators-contactid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -735,9 +735,9 @@ include::partial$lager.adoc[]
 :kommas:
 
 [[table-key-figures-operators-warehouse]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -762,9 +762,9 @@ include::partial$lieferland.adoc[]
 :kommas:
 
 [[table-key-figures-operators-delivery-countries]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -792,9 +792,9 @@ include::partial$mandant.adoc[]
 :kommas:
 
 [[table-key-figures-operators-client]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -819,9 +819,9 @@ include::partial$rechnungsland.adoc[]
 :kommas:
 
 [[table-key-figures-operators-invoice-countries]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -850,9 +850,9 @@ include::partial$retourengrund.adoc[]
 :kommas:
 
 [[table-key-figures-operators-returnreason]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -881,9 +881,9 @@ include::partial$typ-der-auftragseigenschaft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-property-type]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -906,9 +906,9 @@ include::partial$varianten-id.adoc[]
 --
 
 [[table-key-figures-operators-variation-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -936,9 +936,9 @@ include::partial$shipping-provider.adoc[]
 :kommas:
 
 [[table-key-figures-operators-shipping-provider]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -962,9 +962,9 @@ include::partial$versandprofil.adoc[]
 :kommas:
 
 [[table-key-figures-operators-shipping-profile]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -986,9 +986,9 @@ include::partial$warenausgang-gebucht.adoc[]
 :kommas:
 
 [[table-key-figures-operators-outgoing-items-booked]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -1009,9 +1009,9 @@ include::partial$warenausgangsdatum.adoc[]
 :kommas:
 
 [[table-key-figures-operators-items-booked-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -1044,9 +1044,9 @@ include::partial$wert-der-auftragseigenschaft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-property-value]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -1075,9 +1075,9 @@ include::partial$zahlungsart.adoc[]
 :kommas:
 
 [[table-key-figures-operators-payment-method]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -1103,9 +1103,9 @@ include::partial$zahlungsstatus.adoc[]
 :kommas:
 
 [[table-key-figures-operators-payment-status]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
