--- a/docs/de-de/modules/business-entscheidungen/pages/_template-kennzahlen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/_template-kennzahlen.adoc
@@ -93,9 +93,9 @@ include::partial$filter-einleitung.adoc[]
 :kommas:
 
 [[table-key-figures-operators-ordertype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 // include::partial$entspricht-einem-dieser-werte.adoc[]
 // include::partial$entspricht-keinem-dieser-werte.adoc[]
@@ -136,9 +136,9 @@ include::partial$artikel-id.adoc[]
 :kommas: Verwende Kommas, um mehrere Artikel-IDs zu trennen.
 
 [[table-key-figures-operators-itemid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 // include::partial$entspricht-einem-dieser-werte.adoc[]
 // include::partial$entspricht-keinem-dieser-werte.adoc[]
@@ -171,9 +171,9 @@ include::partial$auftragspositionstyp.adoc[]
 :kommas:
 
 [[table-key-figures-operators-orderitemtype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 // include::partial$entspricht-einem-dieser-werte.adoc[]
 // include::partial$entspricht-keinem-dieser-werte.adoc[]
@@ -232,9 +232,9 @@ include::partial$hersteller.adoc[]
 :kommas:
 
 [[table-key-figures-operators-producer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 // include::partial$entspricht-einem-dieser-werte.adoc[]
 // include::partial$entspricht-keinem-dieser-werte.adoc[]
