--- a/docs/de-de/modules/business-entscheidungen/pages/kontakte.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/kontakte.adoc
@@ -69,9 +69,9 @@ include::partial$rating-contact.adoc[]
 :kommas:
 
 [[table-key-figures-operators-rating-contact]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -103,9 +103,9 @@ include::partial$duration-since-contact-creation.adoc[]
 :kommas:
 
 [[table-key-figures-operators-duration-since-contact-creation]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -138,9 +138,9 @@ include::partial$contact-owner.adoc[]
 :kommas:
 
 [[table-key-figures-operators-contact-owner]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -170,9 +170,9 @@ include::partial$erstellt-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-created-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -208,9 +208,9 @@ include::partial$herkunft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-referrer-contact]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -251,9 +251,9 @@ include::partial$country-filter.adoc[]
 :kommas:
 
 [[table-key-figures-operators-referrer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -288,9 +288,9 @@ include::partial$language.adoc[]
 :keinem-keiner: keiner
 
 [[table-key-figures-operators-language]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
