--- a/docs/de-de/modules/business-entscheidungen/pages/marktplatz-bestandsinformationen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/marktplatz-bestandsinformationen.adoc
@@ -63,9 +63,9 @@ include::partial$erstellt-am.adoc[]
 --
 
 [[table-key-figures-operators-erstellt-am]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -94,9 +94,9 @@ include::partial$herkunft.adoc[]
 --
 
 [[table-key-figures-operators]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -128,9 +128,9 @@ include::partial$kennzeichenwert.adoc[]
 --
 
 [[table-key-figures-kennzeichenwert]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 include::partial$ist-gleich.adoc[]
 
 include::partial$ist-nicht-gleich.adoc[]
@@ -148,9 +148,9 @@ include::partial$varianten-id.adoc[]
 --
 
 [[table-key-figures-operators-variation-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
