--- a/docs/de-de/modules/business-entscheidungen/pages/marktplatz-variantenvalidierung.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/marktplatz-variantenvalidierung.adoc
@@ -73,9 +73,9 @@ include::partial$erstellt-am.adoc[]
 :kommas: Verwende Kommas, um mehrere Werte einzugeben.
 
 [[table-key-figures-operators-erstellt-am]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -106,9 +106,9 @@ include::partial$herkunft.adoc[]
 --
 
 [[table-key-figures-operators]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -140,9 +140,9 @@ include::partial$kennzeichenwert.adoc[]
 --
 
 [[table-key-figures-kennzeichenwert]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -160,9 +160,9 @@ include::partial$schluesselfeld.adoc[]
 --
 
 [[table-key-figures-operators-schluesselfeld]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -182,9 +182,9 @@ include::partial$varianten-id.adoc[]
 --
 
 [[table-key-figures-operators-variation-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
