--- a/docs/de-de/modules/business-entscheidungen/pages/nachrichten.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/nachrichten.adoc
@@ -98,9 +98,9 @@ include::partial$abgeschlossen-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-done-at]]
-[cols="1,1,3"]
+[cols=,1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -131,9 +131,9 @@ include::partial$auftrags-id.adoc[]
 :kommas: Verwende Kommas, um mehrere Auftrags-IDs zu trennen.
 
 [[table-key-figures-operators-order-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -162,9 +162,9 @@ include::partial$erstellt-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-created-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -198,9 +198,9 @@ include::partial$geaendert-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-updated-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -234,9 +234,9 @@ include::partial$geloescht-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-deleted-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -269,9 +269,9 @@ include::partial$herkunft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-referrer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -299,9 +299,9 @@ include::partial$kontakt-id.adoc[]
 :kommas: Verwende Kommas, um mehrere Kontakt-IDs zu trennen.
 
 [[table-key-figures-operators-contact-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -330,9 +330,9 @@ include::partial$minuten.adoc[]
 :kommas:
 
 [[table-key-figures-operators-minutes]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -365,9 +365,9 @@ include::partial$tag.adoc[]
 :kommas:
 
 [[table-key-figures-operators-tag]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -396,9 +396,9 @@ include::partial$von-benutzer.adoc[]
 :kommas:
 
 [[table-key-figures-operators-from-user]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -427,9 +427,9 @@ include::partial$von-e-mail.adoc[]
 :kommas:
 
 [[table-key-figures-operators-from-email]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -458,9 +458,9 @@ include::partial$von-kontakt-id.adoc[]
 :kommas: :kommas: Verwende Kommas, um mehrere Kontakt-IDs zu trennen.
 
 [[table-key-figures-operators-from-contact-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
