--- a/docs/de-de/modules/business-entscheidungen/pages/retourenquote.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/retourenquote.adoc
@@ -247,9 +247,9 @@ include::partial$amazon-konto.adoc[]
 :kommas:
 
 [[table-key-figures-operators-amazon-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -273,9 +273,9 @@ include::partial$artikel-id.adoc[]
 :kommas:
 
 [[table-key-figures-operators-itemid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -303,9 +303,9 @@ include::partial$auftragsherkunft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-referrer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -344,9 +344,9 @@ include::partial$order-referrer-plugin.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-referrer-plugin]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -375,9 +375,9 @@ include::partial$order-referrer-plugin-selection.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-referrer-plugin-selection]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -403,9 +403,9 @@ include::partial$auftragspositionstyp.adoc[]
 :kommas:
 
 [[table-key-figures-operators-orderitemtype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-keinem-dieser-werte.adoc[]
 
@@ -429,9 +429,9 @@ include::partial$auftragsstatus.adoc[]
 :kommas:
 
 [[table-key-figures-operators-orderstatus]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -471,9 +471,9 @@ _Beachte_, dass du diesen Filter setzen musst. Wähle die Auftragstypen Gutschri
 :kommas:
 
 [[table-key-figures-operators-ordertype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -498,9 +498,9 @@ include::partial$bezahlt-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-paid-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -532,9 +532,9 @@ include::partial$ebay-konto.adoc[]
 :kommas:
 
 [[table-key-figures-operators-ebay-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -559,9 +559,9 @@ include::partial$erloeskonto.adoc[]
 :kommas:
 
 [[table-key-figures-operators-revenue-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -589,9 +589,9 @@ include::partial$erstellt-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-created-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -624,9 +624,9 @@ include::partial$hersteller.adoc[]
 :kommas:
 
 [[table-key-figures-operators-producer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -654,9 +654,9 @@ include::partial$kontakt-id.adoc[]
 :kommas:
 
 [[table-key-figures-operators-contactid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -683,9 +683,9 @@ include::partial$lager.adoc[]
 :kommas:
 
 [[table-key-figures-operators-warehouse]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -710,9 +710,9 @@ include::partial$lieferland.adoc[]
 :kommas:
 
 [[table-key-figures-operators-delivery-countries]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -740,9 +740,9 @@ include::partial$mandant.adoc[]
 :kommas:
 
 [[table-key-figures-operators-client]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -767,9 +767,9 @@ include::partial$rechnungsland.adoc[]
 :kommas:
 
 [[table-key-figures-operators-invoice-countries]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -798,9 +798,9 @@ include::partial$retourengrund.adoc[]
 :kommas:
 
 [[table-key-figures-operators-returnreason]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -829,9 +829,9 @@ include::partial$typ-der-auftragseigenschaft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-property-type]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -854,9 +854,9 @@ include::partial$varianten-id.adoc[]
 --
 
 [[table-key-figures-operators-variation-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -884,9 +884,9 @@ include::partial$shipping-provider.adoc[]
 :kommas:
 
 [[table-key-figures-operators-shipping-provider]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -910,9 +910,9 @@ include::partial$versandprofil.adoc[]
 :kommas:
 
 [[table-key-figures-operators-shipping-profile]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -934,9 +934,9 @@ include::partial$warenausgang-gebucht.adoc[]
 :kommas:
 
 [[table-key-figures-operators-outgoing-items-booked]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -957,9 +957,9 @@ include::partial$warenausgangsdatum.adoc[]
 :kommas:
 
 [[table-key-figures-operators-items-booked-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -992,9 +992,9 @@ include::partial$wert-der-auftragseigenschaft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-property-value]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -1023,9 +1023,9 @@ include::partial$zahlungsart.adoc[]
 :kommas:
 
 [[table-key-figures-operators-payment-method]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -1052,9 +1052,9 @@ include::partial$zahlungsstatus.adoc[]
 :kommas:
 
 [[table-key-figures-operators-payment-status]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
