--- a/docs/de-de/modules/business-entscheidungen/pages/umsatzsteuer-gesamt.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/umsatzsteuer-gesamt.adoc
@@ -227,9 +227,9 @@ include::partial$subscription-item-ended-at.adoc[]
 :kommas:
 
 [[table-key-figures-operators-subscription-item-ended-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -260,9 +260,9 @@ include::partial$subscription-item-started-at.adoc[]
 :kommas:
 
 [[table-key-figures-operators-subscription-item-started-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -293,9 +293,9 @@ include::partial$subscription-ended-at.adoc[]
 :kommas:
 
 [[table-key-figures-operators-subscription-ended-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -326,9 +326,9 @@ include::partial$subscription-started-at.adoc[]
 :kommas:
 
 [[table-key-figures-operators-subscription-started-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -360,9 +360,9 @@ include::partial$amazon-konto.adoc[]
 :kommas:
 
 [[table-key-figures-operators-amazon-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -386,9 +386,9 @@ include::partial$artikel-id.adoc[]
 :kommas:
 
 [[table-key-figures-operators-itemid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -416,9 +416,9 @@ include::partial$auftragsherkunft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-referrer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -456,9 +456,9 @@ include::partial$auftragspositionstyp.adoc[]
 :kommas:
 
 [[table-key-figures-operators-orderitemtype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-keinem-dieser-werte.adoc[]
 
@@ -482,9 +482,9 @@ include::partial$auftragsstatus.adoc[]
 :kommas:
 
 [[table-key-figures-operators-orderstatus]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -524,9 +524,9 @@ _Beachte_, dass die Umsatzsteuerbeträge von Gutschriften und Retouren vom Gesam
 :kommas:
 
 [[table-key-figures-operators-ordertype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -551,9 +551,9 @@ include::partial$bezahlt-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-paid-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -585,9 +585,9 @@ include::partial$ebay-konto.adoc[]
 :kommas:
 
 [[table-key-figures-operators-ebay-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -612,9 +612,9 @@ include::partial$erloeskonto.adoc[]
 :kommas:
 
 [[table-key-figures-operators-revenue-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -642,9 +642,9 @@ include::partial$erstellt-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-created-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -677,9 +677,9 @@ include::partial$hersteller.adoc[]
 :kommas:
 
 [[table-key-figures-operators-producer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -707,9 +707,9 @@ include::partial$kontakt-id.adoc[]
 :kommas:
 
 [[table-key-figures-operators-contactid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -736,9 +736,9 @@ include::partial$lager.adoc[]
 :kommas:
 
 [[table-key-figures-operators-warehouse]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -763,9 +763,9 @@ include::partial$lieferland.adoc[]
 :kommas:
 
 [[table-key-figures-operators-delivery-countries]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -793,9 +793,9 @@ include::partial$mandant.adoc[]
 :kommas:
 
 [[table-key-figures-operators-client]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -820,9 +820,9 @@ include::partial$rechnungsland.adoc[]
 :kommas:
 
 [[table-key-figures-operators-invoice-countries]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -851,9 +851,9 @@ include::partial$retourengrund.adoc[]
 :kommas:
 
 [[table-key-figures-operators-returnreason]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -882,9 +882,9 @@ include::partial$typ-der-auftragseigenschaft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-property-type]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -907,9 +907,9 @@ include::partial$varianten-id.adoc[]
 --
 
 [[table-key-figures-operators-variation-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -937,9 +937,9 @@ include::partial$shipping-provider.adoc[]
 :kommas:
 
 [[table-key-figures-operators-shipping-provider]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -963,9 +963,9 @@ include::partial$versandprofil.adoc[]
 :kommas:
 
 [[table-key-figures-operators-shipping-profile]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -987,9 +987,9 @@ include::partial$warenausgang-gebucht.adoc[]
 :kommas:
 
 [[table-key-figures-operators-outgoing-items-booked]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -1010,9 +1010,9 @@ include::partial$warenausgangsdatum.adoc[]
 :kommas:
 
 [[table-key-figures-operators-items-booked-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -1045,9 +1045,9 @@ include::partial$wert-der-auftragseigenschaft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-property-value]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -1076,9 +1076,9 @@ include::partial$zahlungsart.adoc[]
 :kommas:
 
 [[table-key-figures-operators-payment-method]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -1104,9 +1104,9 @@ include::partial$zahlungsstatus.adoc[]
 :kommas:
 
 [[table-key-figures-operators-payment-status]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
