--- a/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
@@ -244,9 +244,9 @@ include::partial$subscription-item-ended-at.adoc[]
 :kommas:
 
 [[table-key-figures-operators-subscription-item-ended-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -277,9 +277,9 @@ include::partial$subscription-item-started-at.adoc[]
 :kommas:
 
 [[table-key-figures-operators-subscription-item-started-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -310,9 +310,9 @@ include::partial$subscription-ended-at.adoc[]
 :kommas:
 
 [[table-key-figures-operators-subscription-ended-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -343,9 +343,9 @@ include::partial$subscription-started-at.adoc[]
 :kommas:
 
 [[table-key-figures-operators-subscription-started-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -377,9 +377,9 @@ include::partial$amazon-konto.adoc[]
 :kommas:
 
 [[table-key-figures-operators-amazon-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -403,9 +403,9 @@ include::partial$artikel-id.adoc[]
 :kommas:
 
 [[table-key-figures-operators-itemid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -433,9 +433,9 @@ include::partial$auftragsherkunft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-referrer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -474,9 +474,9 @@ include::partial$auftragsstatus.adoc[]
 :kommas:
 
 [[table-key-figures-operators-orderstatus]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -516,9 +516,9 @@ _Beachte_, dass die Versandumsatzbeträge von Gutschriften und Retouren vom Vers
 :kommas:
 
 [[table-key-figures-operators-ordertype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -543,9 +543,9 @@ include::partial$bezahlt-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-paid-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -577,9 +577,9 @@ include::partial$ebay-konto.adoc[]
 :kommas:
 
 [[table-key-figures-operators-ebay-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -604,9 +604,9 @@ include::partial$erloeskonto.adoc[]
 :kommas:
 
 [[table-key-figures-operators-revenue-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -634,9 +634,9 @@ include::partial$erstellt-am.adoc[]
 :kommas:
 
 [[table-key-figures-operators-created-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -669,9 +669,9 @@ include::partial$hersteller.adoc[]
 :kommas:
 
 [[table-key-figures-operators-producer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -699,9 +699,9 @@ include::partial$kontakt-id.adoc[]
 :kommas:
 
 [[table-key-figures-operators-contactid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -728,9 +728,9 @@ include::partial$lager.adoc[]
 :kommas:
 
 [[table-key-figures-operators-warehouse]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -755,9 +755,9 @@ include::partial$lieferland.adoc[]
 :kommas:
 
 [[table-key-figures-operators-delivery-countries]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -785,9 +785,9 @@ include::partial$mandant.adoc[]
 :kommas:
 
 [[table-key-figures-operators-client]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -812,9 +812,9 @@ include::partial$rechnungsland.adoc[]
 :kommas:
 
 [[table-key-figures-operators-invoice-countries]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -843,9 +843,9 @@ include::partial$retourengrund.adoc[]
 :kommas:
 
 [[table-key-figures-operators-returnreason]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -874,9 +874,9 @@ include::partial$typ-der-auftragseigenschaft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-property-type]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -898,9 +898,9 @@ include::partial$varianten-id.adoc[]
 --
 
 [[table-key-figures-operators-variation-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Operator | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -928,9 +928,9 @@ include::partial$shipping-provider.adoc[]
 :kommas:
 
 [[table-key-figures-operators-shipping-provider]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -954,9 +954,9 @@ include::partial$versandprofil.adoc[]
 :kommas:
 
 [[table-key-figures-operators-shipping-profile]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -978,9 +978,9 @@ include::partial$warenausgang-gebucht.adoc[]
 :kommas:
 
 [[table-key-figures-operators-outgoing-items-booked]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -1001,9 +1001,9 @@ include::partial$warenausgangsdatum.adoc[]
 :kommas:
 
 [[table-key-figures-operators-items-booked-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -1036,9 +1036,9 @@ include::partial$wert-der-auftragseigenschaft.adoc[]
 :kommas:
 
 [[table-key-figures-operators-order-property-value]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
@@ -1067,9 +1067,9 @@ include::partial$zahlungsart.adoc[]
 :kommas:
 
 [[table-key-figures-operators-payment-method]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$entspricht-einem-dieser-werte.adoc[]
 
@@ -1095,9 +1095,9 @@ include::partial$zahlungsstatus.adoc[]
 :kommas:
 
 [[table-key-figures-operators-payment-status]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Vergleichsoperator | Zeichen | Erklärung
+| Vergleichsoperator | Erklärung
 
 include::partial$ist-gleich.adoc[]
 
