--- a/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
@@ -49,8 +49,7 @@ Aufträge in der Paketinhaltsliste suchen:
 
 . Öffne das Menü *Aufträge » Paketinhaltsliste 2.0*.
 .. *_Möglichkeit 1_*: Klicke auf material:search[], um direkt eine Liste aller Aufträge zu sehen.
-.. *_Möglichkeit 2_*: Gib eine Auftrags-ID in das Suchfeld ein und klicke auf den automatischen Vorschlag.
-Klicke dann auf material:search[], um die Suche auszuführen.
+.. *_Möglichkeit 2_*: Gib eine Auftrags-ID in das Suchfeld ein und klicke auf den automatischen Vorschlag (siehe <<#image-example-search-field>>). Klicke dann auf material:search[], um die Suche auszuführen.
 .. *_Möglichkeit 3_*: Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen. Beachte die Erläuterungen zu den Filtern in <<#table-search-orders>>.
 . Wenn du die Suche ausführst, siehst du die Ergebnisliste.
 
@@ -181,11 +180,11 @@ Wenn du in der Übersicht der Paketinhaltsliste 2.0 einen Auftrag wählst (mater
 
 | material:lock[] *Alle Paletten schließen*
 |Schließt alle Paletten der gewählten Aufträge. +
-*_Beachte:_* Sobald eine Palette geschlossen ist, kann diese nicht weiter bearbeitet werden.
+*_Beachte:_* Sobald eine Palette geschlossen ist, kann diese _nicht_ weiter bearbeitet werden.
 
 | material:lock[] *Alle Pakete schließen*
 |Schließt alle Pakete der gewählten Aufträge. +
-*_Beachte:_* Sobald ein Paket geschlossen ist, kann dieses nicht weiter bearbeitet werden.
+*_Beachte:_* Sobald ein Paket geschlossen ist, kann dieses _nicht_ weiter bearbeitet werden.
 
 | material:delete[] *Alle Paletten löschen*
 |Löscht alle Paletten der gewählten Aufträge.
@@ -416,7 +415,7 @@ Paket erstellen:
 [#add-item-to-package]
 === Artikel verpacken
 
-Du hast noch unverpackte Artiekl, die du in ein Paket packen möchtest? Um Artikel zu verpacken und einem Paket hinzuzufügen, gehe vor wie folgt.
+Du hast noch unverpackte Artikel, die du in ein Paket packen möchtest? Um Artikel zu verpacken und einem Paket hinzuzufügen, gehe vor wie folgt.
 
 [TIP]
 .Artikel per Varianten-ID hinzufügen
@@ -619,7 +618,7 @@ Paket schließen:
 [NOTE]
 .Anmeldung von Paletten ohne Schließen möglich
 ====
-Paletten müssen nicht geschlossen sein, um sie im Versand-Center 2.0 anzumelden.
+Paletten müssen _nicht_ geschlossen sein, um sie im xref:fulfillment:versand-center-2-0.adoc#[Versand-Center 2.0] anzumelden.
 ====
 
 [#delete-package]
