remove symbols from pages EN

--- a/docs/en-gb/modules/business-decisions/pages/messages-key-figure.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/messages-key-figure.adoc
@@ -97,9 +97,9 @@ include::partial$contact-id.adoc[]
 :commas: Use commas to separate multiple contact IDs.
 
 [[table-key-figures-operators-contact-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -127,9 +127,9 @@ include::partial$created-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-created-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -163,9 +163,9 @@ include::partial$deleted-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-deleted-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -200,9 +200,9 @@ include::partial$done-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-done-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -236,9 +236,9 @@ include::partial$from-contact-id.adoc[]
 :commas: Use commas to separate multiple contact IDs.
 
 [[table-key-figures-operators-from-contact-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -267,9 +267,9 @@ include::partial$from-email.adoc[]
 :commas:
 
 [[table-key-figures-operators-from-email]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -298,9 +298,9 @@ include::partial$from-user.adoc[]
 :commas:
 
 [[table-key-figures-operators-from-user]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -327,9 +327,9 @@ include::partial$minutes.adoc[]
 :commas:
 
 [[table-key-figures-operators-minutes]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -359,9 +359,9 @@ include::partial$order-id.adoc[]
 :commas: Use commas to separate multiple order IDs.
 
 [[table-key-figures-operators-order-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -388,9 +388,9 @@ include::partial$referrer.adoc[]
 :commas:
 
 [[table-key-figures-operators-referrer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -421,9 +421,9 @@ include::partial$tag.adoc[]
 :commas:
 
 [[table-key-figures-operators-tag]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -452,9 +452,9 @@ include::partial$updated-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-updated-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Symbol | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
