--- a/docs/en-gb/modules/business-decisions/pages/marketplace-variation-validation.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/marketplace-variation-validation.adoc
@@ -74,9 +74,9 @@ include::partial$created-at.adoc[]
 :commas: Use commas to separate multiple values.
 
 [[table-key-figures-operators]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Operator | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -103,9 +103,9 @@ include::partial$identifier-value.adoc[]
 --
 
 [[table-key-figures-identifiervalue]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Operator | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -123,9 +123,9 @@ include::partial$key-field.adoc[]
 --
 
 [[table-key-figures-operators-key]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Operator | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -147,9 +147,9 @@ include::partial$referrer.adoc[]
 --
 
 [[table-key-figures-operators-created]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Operator | Explanation
+| Relational operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -182,9 +182,9 @@ include::partial$variation-id.adoc[]
 --
 
 [[table-key-figures-operators-variation-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Relational operator | Operator | Explanation
+| Relational operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
