--- a/docs/en-gb/modules/business-decisions/pages/orders-key-figure.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/orders-key-figure.adoc
@@ -226,9 +226,9 @@ include::partial$subscription-item-ended-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-subscription-item-ended-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -259,9 +259,9 @@ include::partial$subscription-item-started-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-subscription-item-started-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -292,9 +292,9 @@ include::partial$subscription-ended-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-subscription-ended-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -325,9 +325,9 @@ include::partial$subscription-started-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-subscription-started-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -359,9 +359,9 @@ include::partial$amazon-account.adoc[]
 :commas:
 
 [[table-key-figures-operators-amazon-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -385,9 +385,9 @@ include::partial$item-id.adoc[]
 :commas:
 
 [[table-key-figures-operators-itemid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -415,9 +415,9 @@ include::partial$order-referrer.adoc[]
 :commas:
 
 [[table-key-figures-operators-order-referrer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -456,9 +456,9 @@ include::partial$order-referrer-plugin.adoc[]
 :commas:
 
 [[table-key-figures-operators-order-referrer-plugin]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -487,9 +487,9 @@ include::partial$order-referrer-plugin-selection.adoc[]
 :commas:
 
 [[table-key-figures-operators-order-referrer-plugin-selection]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -515,9 +515,9 @@ include::partial$order-item-type.adoc[]
 :commas:
 
 [[table-key-figures-operators-orderitemtype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-none-of-these-values.adoc[]
 
@@ -541,9 +541,9 @@ include::partial$order-status.adoc[]
 :commas:
 
 [[table-key-figures-operators-orderstatus]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -581,9 +581,9 @@ include::partial$order-type.adoc[]
 :commas:
 
 [[table-key-figures-operators-ordertype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -608,9 +608,9 @@ include::partial$paid-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-paid-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -642,9 +642,9 @@ include::partial$ebay-account.adoc[]
 :commas:
 
 [[table-key-figures-operators-ebay-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -669,9 +669,9 @@ include::partial$revenue-account.adoc[]
 :commas:
 
 [[table-key-figures-operators-revenue-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -699,9 +699,9 @@ include::partial$created-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-created-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -746,9 +746,9 @@ include::partial$manufacturer.adoc[]
 :commas:
 
 [[table-key-figures-operators-producer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -776,9 +776,9 @@ include::partial$contact-id.adoc[]
 :commas:
 
 [[table-key-figures-operators-contactid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -805,9 +805,9 @@ include::partial$warehouse.adoc[]
 :commas:
 
 [[table-key-figures-operators-warehouse]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -832,9 +832,9 @@ include::partial$delivery-country.adoc[]
 :commas:
 
 [[table-key-figures-operators-delivery-countries]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -862,9 +862,9 @@ include::partial$client.adoc[]
 :commas:
 
 [[table-key-figures-operators-client]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -889,9 +889,9 @@ include::partial$invoice-country.adoc[]
 :commas:
 
 [[table-key-figures-operators-invoice-countries]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -920,9 +920,9 @@ include::partial$return-reason.adoc[]
 :commas:
 
 [[table-key-figures-operators-returnreason]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -951,9 +951,9 @@ include::partial$order-property-type.adoc[]
 :commas:
 
 [[table-key-figures-operators-order-property-type]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -976,9 +976,9 @@ include::partial$variation-id.adoc[]
 --
 
 [[table-key-figures-operators-variation-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Operator | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -1006,9 +1006,9 @@ include::partial$shipping-provider.adoc[]
 :commas:
 
 [[table-key-figures-operators-shipping-provider]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -1032,9 +1032,9 @@ include::partial$shipping-profile.adoc[]
 :commas:
 
 [[table-key-figures-operators-shipping-profile]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -1056,9 +1056,9 @@ include::partial$outgoing-items-booked.adoc[]
 :commas:
 
 [[table-key-figures-operators-outgoing-items-booked]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -1079,9 +1079,9 @@ include::partial$date-outgoing-items.adoc[]
 :commas:
 
 [[table-key-figures-operators-items-booked-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -1114,9 +1114,9 @@ include::partial$order-property-value.adoc[]
 :commas:
 
 [[table-key-figures-operators-order-property-value]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -1145,9 +1145,9 @@ include::partial$payment-method.adoc[]
 :commas:
 
 [[table-key-figures-operators-payment-method]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -1173,9 +1173,9 @@ include::partial$payment-status.adoc[]
 :commas:
 
 [[table-key-figures-operators-payment-status]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
