--- a/docs/en-gb/modules/business-decisions/pages/sales-volume.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/sales-volume.adoc
@@ -243,9 +243,9 @@ include::partial$subscription-item-ended-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-subscription-item-ended-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -276,9 +276,9 @@ include::partial$subscription-item-started-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-subscription-item-started-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -309,9 +309,9 @@ include::partial$subscription-ended-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-subscription-ended-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -342,9 +342,9 @@ include::partial$subscription-started-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-subscription-started-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -376,9 +376,9 @@ include::partial$amazon-account.adoc[]
 :commas:
 
 [[table-key-figures-operators-amazon-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -403,9 +403,9 @@ include::partial$item-id.adoc[]
 :commas:
 
 [[table-key-figures-operators-itemid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -433,9 +433,9 @@ include::partial$order-referrer.adoc[]
 :commas:
 
 [[table-key-figures-operators-order-referrer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -474,9 +474,9 @@ include::partial$order-referrer-plugin.adoc[]
 :commas:
 
 [[table-key-figures-operators-order-referrer-plugin]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -505,9 +505,9 @@ include::partial$order-referrer-plugin-selection.adoc[]
 :commas:
 
 [[table-key-figures-operators-order-referrer-plugin-selection]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -533,9 +533,9 @@ include::partial$order-item-type.adoc[]
 :commas:
 
 [[table-key-figures-operators-orderitemtype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-none-of-these-values.adoc[]
 
@@ -559,9 +559,9 @@ include::partial$order-status.adoc[]
 :commas:
 
 [[table-key-figures-operators-orderstatus]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -601,9 +601,9 @@ _Note_ that the quantity of order items in credit notes and returns are subtract
 :commas:
 
 [[table-key-figures-operators-ordertype]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -628,9 +628,9 @@ include::partial$paid-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-paid-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -662,9 +662,9 @@ include::partial$ebay-account.adoc[]
 :commas:
 
 [[table-key-figures-operators-ebay-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -689,9 +689,9 @@ include::partial$revenue-account.adoc[]
 :commas:
 
 [[table-key-figures-operators-revenue-account]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -719,9 +719,9 @@ include::partial$created-at.adoc[]
 :commas:
 
 [[table-key-figures-operators-created-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -766,9 +766,9 @@ include::partial$manufacturer.adoc[]
 :commas:
 
 [[table-key-figures-operators-producer]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -796,9 +796,9 @@ include::partial$contact-id.adoc[]
 :commas:
 
 [[table-key-figures-operators-contactid]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -826,9 +826,9 @@ include::partial$warehouse.adoc[]
 :commas:
 
 [[table-key-figures-operators-warehouse]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -853,9 +853,9 @@ include::partial$delivery-country.adoc[]
 :commas:
 
 [[table-key-figures-operators-delivery-countries]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -883,9 +883,9 @@ include::partial$client.adoc[]
 :commas:
 
 [[table-key-figures-operators-client]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -910,9 +910,9 @@ include::partial$invoice-country.adoc[]
 :commas:
 
 [[table-key-figures-operators-invoice-countries]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -941,9 +941,9 @@ include::partial$return-reason.adoc[]
 :commas:
 
 [[table-key-figures-operators-returnreason]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -972,9 +972,9 @@ include::partial$order-property-type.adoc[]
 :commas:
 
 [[table-key-figures-operators-order-property-type]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -997,9 +997,9 @@ include::partial$variation-id.adoc[]
 --
 
 [[table-key-figures-operators-variation-id]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Operator | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -1027,9 +1027,9 @@ include::partial$shipping-provider.adoc[]
 :commas:
 
 [[table-key-figures-operators-shipping-provider]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -1053,9 +1053,9 @@ include::partial$shipping-profile.adoc[]
 :commas:
 
 [[table-key-figures-operators-shipping-profile]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -1077,9 +1077,9 @@ include::partial$outgoing-items-booked.adoc[]
 :commas:
 
 [[table-key-figures-operators-outgoing-items-booked]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -1100,9 +1100,9 @@ include::partial$date-outgoing-items.adoc[]
 :commas:
 
 [[table-key-figures-operators-items-booked-at]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -1135,9 +1135,9 @@ include::partial$order-property-value.adoc[]
 :commas:
 
 [[table-key-figures-operators-order-property-value]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
@@ -1166,9 +1166,9 @@ include::partial$payment-method.adoc[]
 :commas:
 
 [[table-key-figures-operators-payment-method]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$corresponds-to-one-of-these-values.adoc[]
 
@@ -1194,9 +1194,9 @@ include::partial$payment-status.adoc[]
 :commas:
 
 [[table-key-figures-operators-payment-status]]
-[cols="1,1,3"]
+[cols="1,3"]
 |====
-| Comparison operator | Symbol | Explanation
+| Comparison operator | Explanation
 
 include::partial$is-equal-to.adoc[]
 
