push discount prices

--- a/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
@@ -133,11 +133,13 @@ ifdef::voelkner[]
 endif::voelkner[]
 
 ifdef::voelkner[]
-| *Rabatt Startzeit*
-| Ordne eine Eigenschaft des Typs *Datum* zu. Über diese Eigenschaft legst du fest, wann <<discount-prices, Rabattzeiträume>> starten.
+| *Voelkner Rabatt Startzeit*
+| Eine Eigenschaft *Voelkner Rabatt Startzeit* wird automatisch erstellt und zugeordnet. Über diese Eigenschaft legst du fest, wann <<discount-prices, Rabattzeiträume>> starten.
+endif::voelkner[]
 
-| *Rabatt Endzeit*
-| Ordne eine Eigenschaft des Typs *Datum* zu. Über diese Eigenschaft legst du fest, wann <<discount-prices, Rabattzeiträume>> enden.
+ifdef::voelkner[]
+| *Voelkner Rabatt Endzeit*
+| Eine Eigenschaft *Voelkner Rabatt Endzeit* wird automatisch erstellt und zugeordnet. Über diese Eigenschaft legst du fest, wann <<discount-prices, Rabattzeiträume>> enden.
 endif::voelkner[]
 
 2+^| Schritt *Optionen für Angebots-Export*
