--- a/docs/en-gb/modules/markets/pages/voelkner.adoc
+++ b/docs/en-gb/modules/markets/pages/voelkner.adoc
@@ -200,10 +200,10 @@ Discounting sales price:
 . Enter a price for the special sales price.
 . Link the variation with the property *Voelkner discount start date*.
 . Select a date for the property. +
-→ The discount price is started on this date.
+→ The discount price starts at 00:00 o'clock on this date.
 . Link the variation with the property *Voelkner discount end date*.
 . Select a date for the property. +
-→ The discount price is ended on this date.
+→ The discount price ends at 23:59 o'clock on this date.
 
 --
  
@@ -221,10 +221,10 @@ Discounting graduated prices:
 . Enter a price for each special price.
 . Link the variation with the property *Voelkner discount start date*.
 . Select a date for the property. +
-→ The discount price is started on this date.
+→ The discount prices start at 00:00 o'clock on this date.
 . Link the variation with the property *Voelkner discount end date*.
 . Select a date for the property. +
-→ The discount price is ended on this date.
+→ The discount prices end at 23:59 o'clock on this date.
 
 --
 ====
