Kathrin/voelkner discount prices (#911)
* Update mirakl-market-assistant.adoc

* push

* Update mirakl-market-assistant.adoc

* Update mirakl-market-assistant.adoc

* Update mirakl-market-assistant.adoc

* push

* push discount prices

* add times

--- a/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
@@ -132,6 +132,16 @@ ifdef::voelkner[]
 | Hier definierst du die Einheit der Grundpreisangabe an der Variante. Gültige Werte sind `KG`, `L`, `M`, `M2` oder `M3`.
 endif::voelkner[]
 
+ifdef::voelkner[]
+| *Voelkner Rabatt Startzeit*
+| Eine Eigenschaft *Voelkner Rabatt Startzeit* wird automatisch erstellt und zugeordnet. Über diese Eigenschaft legst du fest, wann <<discount-prices, Rabattzeiträume>> starten.
+endif::voelkner[]
+
+ifdef::voelkner[]
+| *Voelkner Rabatt Endzeit*
+| Eine Eigenschaft *Voelkner Rabatt Endzeit* wird automatisch erstellt und zugeordnet. Über diese Eigenschaft legst du fest, wann <<discount-prices, Rabattzeiträume>> enden.
+endif::voelkner[]
+
 2+^| Schritt *Optionen für Angebots-Export*
 
 | *Bestandsmenge für Varianten ohne Bestandsbindung ersetzen* +
