--- a/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
@@ -100,6 +100,7 @@ Die Informationen sind so aufgebaut:
 * <<#one-to-one-fallback, 1:1-Zuordnungen mit Ausweich-Datenfeld>>
 * <<#one-to-n, 1:n-Zuordnungen>>
 * <<#own-value, Eigener-Wert-Zuordnungen>>
+* <<#formula, Zahlenwerte neu berechnen (Formel)>>
 
 [#mappings-what-is]
 === Was ist überhaupt eine Zuordnung?
