rename file plugin-lizenz.adoc

--- a/docs/de-de/modules/maerkte/pages/google-shopping.adoc
+++ b/docs/de-de/modules/maerkte/pages/google-shopping.adoc
@@ -183,4 +183,4 @@ include::maerkte:partial$exportdatei-herunterladen.adoc[]
 
 :license-link: https://github.com/plentymarkets/plugin-elastic-export-google-shopping/blob/master/LICENSE.md
 
-include::partial$plugin-lizenz.adoc[]
+include::partial$plugin-license.adoc[]
