--- a/docs/de-de/modules/maerkte/pages/voelkner.adoc
+++ b/docs/de-de/modules/maerkte/pages/voelkner.adoc
@@ -27,7 +27,7 @@ include::partial$mirakl-first-steps.adoc[]
 
 Aufträge, die auf Voelkner erzeugt wurden, werden alle 15 Minuten in dein plentymarkets System importiert.
 
-[#order-process][#test-second-anchor]
+[#order-process]
 == Ablauf der Auftragsabwicklung
 
 So läuft die Auftragsabwicklung bei Voelkner ab:
