--- a/docs/de-de/modules/maerkte/pages/kupona.adoc
+++ b/docs/de-de/modules/maerkte/pages/kupona.adoc
@@ -117,4 +117,4 @@ include::maerkte:partial$exportdatei-herunterladen.adoc[]
 
 :license-link: https://github.com/plentymarkets/plugin-elastic-export-kupona-de/blob/master/LICENSE.md
 
-include::partial$plugin-lizenz.adoc[]
+include::partial$plugin-license.adoc[]
