--- a/docs/de-de/modules/maerkte/pages/shopzilla.adoc
+++ b/docs/de-de/modules/maerkte/pages/shopzilla.adoc
@@ -148,4 +148,4 @@ Der *Verkaufspreis* der Variante.
 
 :license-link: https://github.com/plentymarkets/plugin-elastic-export-shopzilla-de/blob/master/LICENSE.md
 
-include::partial$plugin-lizenz.adoc[]
+include::partial$plugin-license.adoc[]
