--- a/docs/de-de/modules/maerkte/partials/plugin-license.adoc
+++ b/docs/de-de/modules/maerkte/partials/plugin-license.adoc
@@ -3,5 +3,5 @@ Das gesamte Projekt unterliegt der GNU AFFERO GENERAL PUBLIC LICENSE. Weitere In
 ////
 :license-link: xxxx
 
-include::partial$plugin-lizenz.adoc[]
+include::partial$plugin-license.adoc[]
 ////
