--- a/docs/de-de/modules/maerkte/pages/fruugo.adoc
+++ b/docs/de-de/modules/maerkte/pages/fruugo.adoc
@@ -110,7 +110,7 @@ include::partial$variantenverfuegbarkeit.adoc[]
 
 :referrer-price: Fruugo
 
-include::partial$verkaufspreis-festlegen.adoc[]
+include::partial$define-sales-price.adoc[]
 
 [#400]
 == Attribute verknüpfen
