--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -264,7 +264,7 @@ include::partial$zahlungsart_aktivieren.adoc[]
 
 :referrer-price: Kaufland.de
 
-include::partial$verkaufspreis-festlegen.adoc[]
+include::partial$define-sales-price.adoc[]
 
 [#450]
 === Barcode festlegen
