--- a/docs/de-de/modules/maerkte/pages/kauflux.adoc
+++ b/docs/de-de/modules/maerkte/pages/kauflux.adoc
@@ -84,7 +84,7 @@ include::partial$sku-manuell.adoc[]
 
 :referrer-price: Kauflux
 
-include::partial$verkaufspreis-festlegen.adoc[]
+include::partial$define-sales-price.adoc[]
 
 [#500]
 == Merkmale für Marktplatz aktivieren
