--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -196,7 +196,7 @@ include::partial$zahlungsart_aktivieren.adoc[]
 
 :referrer-price: limango
 
-include::partial$verkaufspreis-festlegen.adoc[]
+include::partial$define-sales-price.adoc[]
 
 [#550]
 === Herkunft in Versandprofilen aktivieren
