--- a/docs/de-de/modules/maerkte/pages/mytoys.adoc
+++ b/docs/de-de/modules/maerkte/pages/mytoys.adoc
@@ -159,7 +159,7 @@ include::partial$auftragsherkunft-aktivieren.adoc[]
 
 :referrer-price: myToys
 
-include::partial$verkaufspreis-festlegen.adoc[]
+include::partial$define-sales-price.adoc[]
 
 [#payment-method]
 === Zahlungsart in Kundenklasse erlauben
