rename: sku-manuell.adoc

--- a/docs/de-de/modules/maerkte/pages/cdiscount.adoc
+++ b/docs/de-de/modules/maerkte/pages/cdiscount.adoc
@@ -210,7 +210,7 @@ include::partial$variantenverfuegbarkeit.adoc[]
 :referrer-id: 143
 :sku-others:
 
-include::partial$sku-manuell.adoc[]
+include::partial$sku-manually.adoc[]
 
 // Marktplatzkonto nicht erforderlich!
 
