--- a/docs/de-de/modules/maerkte/pages/check24.adoc
+++ b/docs/de-de/modules/maerkte/pages/check24.adoc
@@ -62,7 +62,7 @@ Welche Varianten zu {market} exportiert werden, steuerst du nicht über die Vari
 :referrer-id: 150
 :sku-others:
 
-include::partial$sku-manuell.adoc[]
+include::partial$sku-manually.adoc[]
 
 // Marktplatzkonto nicht erforderlich!
 
