--- a/docs/de-de/modules/maerkte/pages/kauflux.adoc
+++ b/docs/de-de/modules/maerkte/pages/kauflux.adoc
@@ -75,7 +75,7 @@ include::partial$variantenverfuegbarkeit.adoc[]
 :referrer-id: 116
 :sku-others:
 
-include::partial$sku-manuell.adoc[]
+include::partial$sku-manually.adoc[]
 
 // Marktplatzkonto nicht erforderlich!
 
