--- a/docs/de-de/modules/maerkte/pages/plus-gartenxxl.adoc
+++ b/docs/de-de/modules/maerkte/pages/plus-gartenxxl.adoc
@@ -200,7 +200,7 @@ include::partial$variantenverfuegbarkeit.adoc[]
 :referrer-id: 131
 :sku-others:
 
-include::partial$sku-manuell.adoc[]
+include::partial$sku-manually.adoc[]
 
 // Marktplatzkonto nicht erforderlich!
 
