--- a/docs/de-de/modules/maerkte/pages/yatego.adoc
+++ b/docs/de-de/modules/maerkte/pages/yatego.adoc
@@ -148,7 +148,7 @@ include::partial$variantenverfuegbarkeit.adoc[]
 :referrer-id: 5
 :sku-others:
 
-include::partial$sku-manuell.adoc[]
+include::partial$sku-manually.adoc[]
 
 // Marktplatzkonto nicht erforderlich!
 
