--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -540,7 +540,7 @@ include::partial$variantenverfuegbarkeit.adoc[]
 :referrer-id: 118
 :sku-others:
 
-include::partial$sku-manuell.adoc[]
+include::partial$sku-manually.adoc[]
 
 // Marktplatzkonto nicht erforderlich!
 
