rename: define-sales-price.adoc

--- a/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
@@ -404,7 +404,7 @@ Gehe wie im Folgenden beschrieben vor, um für die Auftragsherkunft idealo einen
 
 :referrer-price: idealo
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [TIP]
 .Mindestpreis
