--- a/docs/de-de/modules/maerkte/pages/yatego.adoc
+++ b/docs/de-de/modules/maerkte/pages/yatego.adoc
@@ -157,7 +157,7 @@ include::partial$sku-manually.adoc[]
 
 :referrer-price: Yatego
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#500]
 == Kategorien verknüpfen
