--- a/docs/en-gb/modules/markets/pages/bol-com.adoc
+++ b/docs/en-gb/modules/markets/pages/bol-com.adoc
@@ -118,7 +118,7 @@ include::partial$activate-referrer.adoc[]
 
 :referrer-price: bol.com
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#650]
 === Permitting payment method in a customer class
