--- a/docs/en-gb/modules/markets/pages/limango.adoc
+++ b/docs/en-gb/modules/markets/pages/limango.adoc
@@ -196,7 +196,7 @@ include::partial$activate-payment-method.adoc[]
 
 :referrer-price: limango
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#550]
 === Activating the referrer in shipping profiles
