--- a/docs/en-gb/modules/markets/pages/mercateo.adoc
+++ b/docs/en-gb/modules/markets/pages/mercateo.adoc
@@ -213,7 +213,7 @@ Exporting item images:
 
 :referrer-price: Mercateo
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#600]
 == Viewing the export history
