--- a/docs/en-gb/modules/markets/pages/rewe.adoc
+++ b/docs/en-gb/modules/markets/pages/rewe.adoc
@@ -147,7 +147,7 @@ Defining stock export:
 
 :referrer-price: REWE
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#1800]
 == Managing promotion prices
