--- a/docs/en-gb/modules/markets/pages/shopgate.adoc
+++ b/docs/en-gb/modules/markets/pages/shopgate.adoc
@@ -247,7 +247,7 @@ Adding SKU:
 
 :referrer-price: Shopgate
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#500]
 == Linking properties
