--- a/docs/en-gb/modules/markets/pages/voelkner.adoc
+++ b/docs/en-gb/modules/markets/pages/voelkner.adoc
@@ -75,7 +75,7 @@ include::partial$activate-referrer.adoc[]
 :referrer-price: {market}
 :mirakl-sales-price:
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#volume-discount]
 === _Optional:_ Defining graduated prices
