--- a/docs/de-de/modules/maerkte/pages/bol-com.adoc
+++ b/docs/de-de/modules/maerkte/pages/bol-com.adoc
@@ -118,7 +118,7 @@ include::partial$auftragsherkunft-aktivieren.adoc[]
 
 :referrer-price: bol.com
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#650]
 === Zahlungsart in Kundenklasse erlauben
