--- a/docs/de-de/modules/maerkte/pages/cdiscount.adoc
+++ b/docs/de-de/modules/maerkte/pages/cdiscount.adoc
@@ -219,7 +219,7 @@ include::partial$sku-manually.adoc[]
 
 :referrer-price: Cdiscount
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 xref:artikel:preise.adoc#900[Verknüpfe] den Verkaufspreis im Anschluss mit den gewünschten Varianten, falls noch nicht verknüpft.
 
