--- a/docs/de-de/modules/maerkte/pages/check24.adoc
+++ b/docs/de-de/modules/maerkte/pages/check24.adoc
@@ -71,7 +71,7 @@ include::partial$sku-manually.adoc[]
 
 :referrer-price: Check24
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#700]
 === Zahlungsart in Kundenklasse erlauben
