--- a/docs/de-de/modules/maerkte/pages/flubit.adoc
+++ b/docs/de-de/modules/maerkte/pages/flubit.adoc
@@ -111,7 +111,7 @@ include::partial$variantenverfuegbarkeit.adoc[]
 
 :referrer-price: Flubit
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#370]
 == Zahlungsart in Kundenklasse erlauben
