--- a/docs/de-de/modules/maerkte/pages/kauflux.adoc
+++ b/docs/de-de/modules/maerkte/pages/kauflux.adoc
@@ -84,7 +84,7 @@ include::partial$sku-manually.adoc[]
 
 :referrer-price: Kauflux
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#500]
 == Merkmale für Marktplatz aktivieren
