--- a/docs/de-de/modules/maerkte/pages/mediamarkt.adoc
+++ b/docs/de-de/modules/maerkte/pages/mediamarkt.adoc
@@ -71,7 +71,7 @@ include::partial$auftragsherkunft-aktivieren.adoc[]
 :referrer-price: {market}
 :mirakl-verkaufspreis:
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#volume-discount]
 === _Optional:_ Staffelpreise festlegen
