--- a/docs/de-de/modules/maerkte/pages/mercateo.adoc
+++ b/docs/de-de/modules/maerkte/pages/mercateo.adoc
@@ -213,7 +213,7 @@ Artikelbilder exportieren:
 
 :referrer-price: Mercateo
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#600]
 ==  Exportverlauf anzeigen
