--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -157,7 +157,7 @@ image::maerkte:otto-market-referrer.png[]
 
 :referrer-price: OTTO Market
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#425]
 === Zahlungsart in Kundenklasse erlauben
