--- a/docs/de-de/modules/maerkte/pages/shopgate.adoc
+++ b/docs/de-de/modules/maerkte/pages/shopgate.adoc
@@ -216,7 +216,7 @@ include::partial$sku-manually.adoc[]
 
 :referrer-price: Shopgate
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#500]
 == Merkmale für Marktplatz aktivieren
