--- a/docs/de-de/modules/maerkte/pages/zalando.adoc
+++ b/docs/de-de/modules/maerkte/pages/zalando.adoc
@@ -473,7 +473,7 @@ include::partial$auftragsherkunft-aktivieren.adoc[]
 
 :referrer-price: Zalando
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#700]
 === Attribute mit Zalando verknüpfen
