--- a/docs/de-de/modules/maerkte/partials/_galeria.adoc
+++ b/docs/de-de/modules/maerkte/partials/_galeria.adoc
@@ -131,7 +131,7 @@ include::partial$zahlungsart_aktivieren.adoc[]
 
 :referrer-price: GALERIA
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#700]
 == Variantenverfügbarkeit einstellen
