--- a/docs/en-gb/modules/markets/pages/cdiscount.adoc
+++ b/docs/en-gb/modules/markets/pages/cdiscount.adoc
@@ -219,7 +219,7 @@ include::partial$sku-manually.adoc[]
 
 :referrer-price: Cdiscount
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 Afterwards, xref:item:prices.adoc#900[link] the sales price with the desired variations if you have not done so.
 
