--- a/docs/en-gb/modules/markets/pages/etsy.adoc
+++ b/docs/en-gb/modules/markets/pages/etsy.adoc
@@ -147,7 +147,7 @@ include::partial$activate-referrer.adoc[]
 
 :referrer-price: Etsy
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#900]
 === Saving legal information
