--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -264,7 +264,7 @@ include::partial$activate-payment-method.adoc[]
 
 :referrer-price: Kaufland.de
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#450]
 === Defining the barcode
