--- a/docs/en-gb/modules/markets/pages/kauflux.adoc
+++ b/docs/en-gb/modules/markets/pages/kauflux.adoc
@@ -84,7 +84,7 @@ include::partial$sku-manually.adoc[]
 
 :referrer-price: Kauflux
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#500]
 == Activating characteristics for the market
