--- a/docs/en-gb/modules/markets/pages/mytoys.adoc
+++ b/docs/en-gb/modules/markets/pages/mytoys.adoc
@@ -159,7 +159,7 @@ include::partial$activate-referrer.adoc[]
 
 :referrer-price: myToys
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#payment-method]
 === Permitting the payment method in a customer class
