--- a/docs/en-gb/modules/markets/pages/otto-market.adoc
+++ b/docs/en-gb/modules/markets/pages/otto-market.adoc
@@ -157,7 +157,7 @@ image::markets:otto-market-referrer.png[]
 
 :referrer-price: OTTO Market
 
-include::partial$define-sales-price.adoc[]
+include::partial$sales-price-definition.adoc[]
 
 [#425]
 === Permitting the payment method in a customer class
